--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 13:44+0200\n"
+"PO-Revision-Date: 2010-07-16 13:45+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1203,7 +1203,7 @@ msgstr "چارشەنبە"
 #. l10n: Minimal week day name
 #: js/messages.php:156
 msgid "Th"
-msgstr ""
+msgstr "پەيشەنبە"
 
 #. l10n: Minimal week day name
 #: js/messages.php:158
