--- a/po/ug.po
+++ b/po/ug.po
@@ -1315,7 +1315,7 @@ msgstr ""
 #: libraries/Index.class.php:476
 #, php-format
 msgid "Index %s has been dropped"
-msgstr ""
+msgstr "ئۆچۈرۈلگەن تېزىسلار %s"
 
 #: libraries/Index.class.php:576
 #, php-format
