--- a/po/ug.po
+++ b/po/ug.po
@@ -1335,7 +1335,7 @@ msgstr "ساندان"
 #: pdf_schema.php:232 tbl_change.php:1024 tbl_operations.php:213
 #: tbl_relation.php:290 view_operations.php:62
 msgid "Error"
-msgstr ""
+msgstr "خاتالىق"
 
 #: libraries/Message.class.php:282
 #, php-format
