Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 13:57+0200\n"
+"PO-Revision-Date: 2010-07-16 13:58+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1417,7 +1417,7 @@ msgstr "ئۇسلۇپ ئەندىزسى %s تېپىلمىدى!"
 #: libraries/Theme_Manager.class.php:153
 #, php-format
 msgid "Theme %s not found!"
-msgstr ""
+msgstr "تېما %s تېپىلمىدى!"
 
 #: libraries/Theme_Manager.class.php:221
 #, php-format
