--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 13:59+0200\n"
+"PO-Revision-Date: 2010-07-16 14:00+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1438,7 +1438,7 @@ msgstr ""
 #: test/theme.php:152
 #, php-format
 msgid "Welcome to %s"
-msgstr ""
+msgstr "%s خۇش كەلدىڭىز"
 
 #: libraries/auth/config.auth.lib.php:107
 #, php-format
