--- a/po/fr.po
+++ b/po/fr.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-01 19:56+0200\n"
+"PO-Revision-Date: 2010-07-19 18:39+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Pootle 2.0.1\n"
 
@@ -530,7 +530,7 @@ msgstr "Effectuer une nouvelle recherche dans la base de données"
 
 #: db_search.php:302
 msgid "Word(s) or value(s) to search for (wildcard: \"%\"):"
-msgstr "Mot ou Valeur à rechercher (passe-partout: «%») :"
+msgstr "Mot ou valeur à rechercher (passe-partout: «%») :"
 
 #: db_search.php:307
 msgid "Find:"
