--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-19 18:42+0200\n"
+"PO-Revision-Date: 2010-07-19 18:58+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -4672,7 +4672,7 @@ msgstr "Permission d'exécuter SHOW CREATE VIEW."
 #: server_privileges.php:56 server_privileges.php:188
 #: server_privileges.php:547
 msgid "Allows shutting down the server."
-msgstr "Permission d'arrêter le serveur MySQL."
+msgstr "Permission d'arrêter le serveur."
 
 #: server_privileges.php:57 server_privileges.php:195
 #: server_privileges.php:544
