--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-19 18:59+0200\n"
+"PO-Revision-Date: 2010-07-19 19:00+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -7257,7 +7257,8 @@ msgstr "Utiliser le mode compression sur la connexion"
 #: setup/lib/messages.inc.php:260
 msgid "How to connect to server, keep [kbd]tcp[/kbd] if unsure"
 msgstr ""
-"Comment se connecter au serveur, utilisez TCP si vous êtes dans le doute"
+"Comment se connecter au serveur, utilisez [kbd]tcp[/kbd] si vous êtes dans "
+"le doute"
 
 #: setup/lib/messages.inc.php:261
 msgid "Connection type"
