--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-19 19:00+0200\n"
+"PO-Revision-Date: 2010-07-19 19:01+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -7602,7 +7602,7 @@ msgstr "Nom à afficher pour ce serveur"
 
 #: setup/lib/messages.inc.php:329
 msgid "Whether a user should be displayed a &quot;show all (rows)&quot; button"
-msgstr "Devrait-on afficher un bouton &quot;Tout afficher&quot;"
+msgstr "Devrait-on afficher un bouton «Tout afficher»"
 
 #: setup/lib/messages.inc.php:330
 msgid "Allow to display all the rows"
