--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-19 19:01+0200\n"
+"PO-Revision-Date: 2010-07-19 19:02+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -7665,7 +7665,9 @@ msgstr "Afficher les requêtes SQL"
 
 #: setup/lib/messages.inc.php:343
 msgid "Allow to display database and table statistics (eg. space usage)"
-msgstr "...sur les bases de données et les tables (espace utilisé)"
+msgstr ""
+"Affiche les statistiques sur les bases de données et les tables (espace "
+"utilisé)"
 
 #: setup/lib/messages.inc.php:344
 msgid "Show statistics"
