--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-19 19:30+0200\n"
+"PO-Revision-Date: 2010-07-19 19:31+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -4349,8 +4349,8 @@ msgid ""
 "appropriate column name."
 msgstr ""
 "La colonne descriptive est montrée en rose. Pour indiquer qu'une colonne est "
-"ou n'est plus la colonne descriptive, cliquer l'icône  «Colonne descriptive», "
-"puis cliquer sur le nom de colonne approprié."
+"ou n'est plus la colonne descriptive, cliquer l'icône «Colonne "
+"descriptive», puis cliquer sur le nom de colonne approprié."
 
 #: pmd_pdf.php:63
 msgid "Page has been created"
