--- a/po/fr.po
+++ b/po/fr.po
@@ -943,7 +943,7 @@ msgstr "Le nom d'utilisateur est vide !"
 
 #: js/messages.php:44 server_privileges.php:1229 user_password.php:73
 msgid "The password is empty!"
-msgstr "Le mot de passe est vide"
+msgstr "Le mot de passe est vide !"
 
 #: js/messages.php:45 server_privileges.php:1227 user_password.php:76
 msgid "The passwords aren't the same!"
