--- a/po/fr.po
+++ b/po/fr.po
@@ -947,7 +947,7 @@ msgstr "Le mot de passe est vide !"
 
 #: js/messages.php:45 server_privileges.php:1227 user_password.php:76
 msgid "The passwords aren't the same!"
-msgstr "Les mots de passe doivent être identiques"
+msgstr "Les mots de passe doivent être identiques !"
 
 #: js/messages.php:49 pmd_general.php:342 pmd_general.php:379
 msgid "Cancel"
