--- a/po/fr.po
+++ b/po/fr.po
@@ -1523,7 +1523,7 @@ msgstr ""
 
 #: libraries/auth/cookie.auth.lib.php:256
 msgid "Server:"
-msgstr "Serveur"
+msgstr "Serveur: "
 
 #: libraries/auth/cookie.auth.lib.php:261
 msgid "Username:"
