--- a/po/fr.po
+++ b/po/fr.po
@@ -1933,7 +1933,7 @@ msgstr ""
 #: libraries/dbi/mysql.dbi.lib.php:353 libraries/dbi/mysql.dbi.lib.php:355
 #: libraries/dbi/mysqli.dbi.lib.php:410
 msgid "The server is not responding"
-msgstr "Le serveur ne répond pas."
+msgstr "Le serveur ne répond pas"
 
 #: libraries/dbi/mysql.dbi.lib.php:353 libraries/dbi/mysqli.dbi.lib.php:410
 msgid "(or the local MySQL server's socket is not correctly configured)"
