--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-19 19:38+0200\n"
+"PO-Revision-Date: 2010-07-19 19:39+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -2337,7 +2337,7 @@ msgstr "total"
 #: libraries/display_tbl.lib.php:1970 sql.php:524
 #, php-format
 msgid "Query took %01.4f sec"
-msgstr "Traitement en %01.4f sec."
+msgstr "Traitement en %01.4f sec"
 
 #: libraries/display_tbl.lib.php:2089 libraries/mult_submits.inc.php:113
 #: querywindow.php:125 querywindow.php:129 querywindow.php:132
