Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -2481,7 +2481,7 @@ msgid ""
 "tables when no MAX_ROWS option is specified."
 msgstr ""
 "La taille du pointeur (en octets) qui servira lors d'un CREATE TABLE sur une "
-"table MyISAM si aucune option MAX_ROWS n'est indiquée"
+"table MyISAM si aucune option MAX_ROWS n'est indiquée."
 
 #: libraries/engines/myisam.lib.php:28
 msgid "Automatic recovery mode"
