--- a/po/fr.po
+++ b/po/fr.po
@@ -2523,7 +2523,7 @@ msgid ""
 msgstr ""
 "Si le fichier temporaire utilisé pour la création rapide des index MyISAM "
 "devrait s'avérer plus volumineux que d'employer la cache des clés (la "
-"différence étant spécifiée ici), utiliser la méthode de cache des clés"
+"différence étant spécifiée ici), utiliser la méthode de cache des clés."
 
 #: libraries/engines/myisam.lib.php:42
 msgid "Repair threads"
