--- a/po/fr.po
+++ b/po/fr.po
@@ -4542,7 +4542,7 @@ msgstr "Permission de créer des vues."
 #: server_privileges.php:34 server_privileges.php:184
 #: server_privileges.php:507
 msgid "Allows deleting data."
-msgstr "Permission de détruire des données"
+msgstr "Permission de détruire des données."
 
 #: server_privileges.php:35 server_privileges.php:186
 #: server_privileges.php:518
