--- a/po/fr.po
+++ b/po/fr.po
@@ -4820,7 +4820,7 @@ msgstr "Ajouter un utilisateur"
 
 #: server_privileges.php:1607
 msgid "Remove selected users"
-msgstr "Effacer les utilisateurs sélectionnés."
+msgstr "Effacer les utilisateurs sélectionnés"
 
 #: server_privileges.php:1610
 msgid "Revoke all active privileges from the users and delete them afterwards."
