Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-19 19:44+0200\n"
+"PO-Revision-Date: 2010-07-19 19:45+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -5779,7 +5779,7 @@ msgstr ""
 "nombre est trop grand, vous pourriez augmenter la valeur du paramètre "
 "thread_cache_size. (Normalement, ceci ne procure pas une amélioration "
 "perceptible de la performance si votre serveur gère correctement les fils "
-"d'exécution."
+"d'exécution.)"
 
 #: server_status.php:146
 msgid "The number of threads that are not sleeping."
