Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -6432,7 +6432,7 @@ msgstr "Affiche les serveurs sous forme de liste"
 
 #: setup/lib/messages.inc.php:67
 msgid "Could not connect to MySQL server"
-msgstr "Connexion au serveur MySQL impossible."
+msgstr "Connexion au serveur MySQL impossible"
 
 #: setup/lib/messages.inc.php:68
 msgid "Empty phpMyAdmin control user password while using pmadb"
