Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -6457,7 +6457,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:73
 msgid "Submitted form contains errors"
-msgstr "Le formulaire soumis contient des erreurs."
+msgstr "Le formulaire soumis contient des erreurs"
 
 #: setup/lib/messages.inc.php:74
 #, php-format
