Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-19 19:45+0200\n"
+"PO-Revision-Date: 2010-07-19 19:46+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -7097,7 +7097,7 @@ msgid ""
 "this utilizes JS-routines to display query history (lost by window close)."
 msgstr ""
 "Activer si vous désirez un historique permanent (nécessite pmadb). Si "
-"désactivé, utilise JS pour afficher un historique temporaire"
+"désactivé, utilise JS pour afficher un historique temporaire."
 
 #: setup/lib/messages.inc.php:227
 msgid "Permanent query history"
