--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-20 11:03+0200\n"
+"PO-Revision-Date: 2010-07-20 11:27+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -980,7 +980,7 @@ msgstr "تاشقى ئاچقۇق قىممىتى"
 
 #: js/messages.php:62
 msgid "Please select the primary key or a unique key"
-msgstr ""
+msgstr "ئاساسىي قىممەت ياكى بىردىنبىر قىمەتنى تاللاڭ"
 
 # column نى سۆزلەم دەپ ئالساق مۇۋاپىق بولغىدەك
 #: js/messages.php:63 pmd_general.php:77 tbl_relation.php:548
