--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-19 10:04-0400\n"
-"PO-Revision-Date: 2010-07-20 11:28+0200\n"
+"PO-Revision-Date: 2010-07-20 11:46+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1320,7 +1320,7 @@ msgstr "تەھىرلەش"
 
 #: libraries/Index.class.php:472
 msgid "The primary key has been dropped"
-msgstr ""
+msgstr "ئاساسىي قىممەت ئۆچۈرۈلدى"
 
 #: libraries/Index.class.php:476
 #, php-format
